app/assets/stylesheets/nav_bar.scss
.nav-bar {
    display: grid;
    align-items: center;
    grid-template-columns: 1fr 1fr;
    padding: 0 2rem;
    margin-top: 1rem;
}

.auth-nav {
    display: inline-block;
    justify-self: end;
    color: #039E74;
    padding-bottom: 8px;
}

.nav-bar-link {
    padding: 7px 10px;
    border: 1px solid #039E74;
    margin: 0 5px;
    border-radius: 4px;
    font-size: 14px;
    width: 75px;
}

#signin-button {
    border: none;
}

.nav-bar-link:hover {
    border-color: rgb(20, 128, 97);
    cursor: pointer;
    color: rgb(20, 128, 97);
}

.auth-nav-buttons {
    display: inline-block;
}

.auth-nav button {
    width: 40px;
    height: 40px;
    margin: 0 3px;
    border: none;
    padding: 0
}


.auth-nav-buttons button:active {
    border: none;
}

button i {
    font-size: 17px;
    color: rgba(148, 147, 147, 0.63)
}

button i:hover {
    color: rgb(148, 147, 147);
    cursor: pointer
}

#user-icon {
    background-color: rgb(103, 22, 196);
    margin-left: 7px;
    border-radius: 30px;
    color: rgba(255, 255, 255, 0.884);
    font-size: 17px;
    font-family: Helvetica;
}

.nav-bar-search {
    display: inline-block
}

.search-hidden {
    display: none;
}

.search-visible {
    display: inline-block;
}

.search-visible input {
    border-radius: 5px;
    border-style: solid;
    border: 1px solid #d4d4d4;
    height: 1.5rem;
    width: 175px;
    font-size: 14px;
    padding: 0 5px;
}

.search-results {
    position: absolute;
    width: 200px;
    border: 1px solid gray;
    padding: 10px;
    background-color: white;
    border-radius: 5px;
    z-index: 3;
    p {
        color: black;
        font-size: 12px;
        padding: 1px
    }
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: .5rem;
    a {
        padding: 2px
    }
    a:hover {
        border: 1px solid rgb(20, 128, 97);
        border-radius: 5px

    }
}

.search-results p:last-child {
    font-size: 10px
}

.search-results p:nth-child(2) {
    font-weight: 600
}


// .search-result:hover {
//     border: 1px solid rgb(20, 128, 97);
//     border-radius: 5px
// }

.search-results-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
    background-color: transparent
}

